@@ -1,3 +1,12 @@
+ Wed Jan 16 14:33:30 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>
+
+        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Transport.cpp:
+          Since the notify change, (Fri Jan  4 15:48:20 UTC 2013  Simon Massey)
+          there is no requirement for the message processing while loop, the
+          reactor handles that. Also add a second check after the lock is
+          aquired before attempting to dequeue the complete message for
+          processing (another thread could have gotten there first).
+
  Wed Jan 16 08:45:30 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>
 
         * tao/GIOP_Message_Base.cpp:
